--- a/src/main/resources/static/friendRequest.html
+++ b/src/main/resources/static/friendRequest.html
@@ -55,6 +55,7 @@
             transition: background 0.3s ease;
             display: flex;
             align-items: center;
+            color:  white;
         }
 
         #sidebar .contact:hover {
@@ -302,7 +303,7 @@
     userCard.dataset.userId = profile.userId;
 
     const userImg = document.createElement("img");
-    userImg.src = "./Photos/Picsart_24-01-06_18-23-01-417.png";
+    userImg.src = profile.image;
     userImg.alt = "User Avatar";
 
     const userInfo = document.createElement("div");
@@ -393,7 +394,7 @@
     userCard.dataset.userId = profile.userId;
 
     const userImg = document.createElement("img");
-    userImg.src = "./Photos/Picsart_24-01-06_18-23-01-417.png";
+    userImg.src = profile.image;
     userImg.alt = "User Avatar";
 
     const userInfo = document.createElement("div");
@@ -462,7 +463,7 @@
         userCard.className = "user-card";
 
         const userImg = document.createElement("img");
-        userImg.src = "./Photos/Picsart_24-01-06_18-23-01-417.png";
+        userImg.src = user.image;
         userImg.alt = "User Avatar";
 
         const userInfo = document.createElement("div");
@@ -540,14 +541,14 @@
             // If the card already exists, update it or skip based on your logic
             return;
         }
-
+ console.log(profile)
         // Create user card elements
         const userCard = document.createElement("div");
         userCard.className = "user-card";
         userCard.dataset.userId = profile.userId;
 
         const userImg = document.createElement("img");
-        userImg.src = "./Photos/Picsart_24-01-06_18-23-01-417.png";
+        userImg.src = profile.image;
         userImg.alt = "User Avatar";
 
         const userInfo = document.createElement("div");
@@ -614,7 +615,7 @@
     <div id="home-container">
         <div id="sidebar">
             <h4>Contacts</h4>
-            <div class="contact"><i class="fas fa-user"></i> Contact 1</div>
+          <a href="Profile.html">  <div class="contact"><i class="fas fa-user"></i> Profile</div></a>
             <div class="contact"><i class="fas fa-user"></i> Contact 2</div>
             <button id="logoutButton">Logout</button>
         </div>
